@@ -24,6 +24,7 @@ import com.generalbytes.batm.server.extensions.extra.bitcoin.wallets.coinbase.v2
 import com.generalbytes.batm.server.extensions.extra.bitcoin.wallets.coinbase.v2.dto.CBBalance;
 import com.generalbytes.batm.server.extensions.extra.bitcoin.wallets.coinbase.v2.dto.CBCreateAddressRequest;
 import com.generalbytes.batm.server.extensions.extra.bitcoin.wallets.coinbase.v2.dto.CBCreateAddressResponse;
+import com.generalbytes.batm.server.extensions.extra.bitcoin.wallets.coinbase.v2.dto.CBNetwork;
 import com.generalbytes.batm.server.extensions.extra.bitcoin.wallets.coinbase.v2.dto.CBTransaction;
 import com.generalbytes.batm.server.extensions.payment.ReceivedAmount;
 import org.slf4j.Logger;
@@ -32,7 +33,7 @@ import org.slf4j.LoggerFactory;
 import java.math.BigDecimal;
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Objects;
 
 public class CoinbaseWalletV2WithUniqueAddresses extends CoinbaseWalletV2 implements IGeneratesNewDepositCryptoAddress, IQueryableWallet {
     private static final Logger log = LoggerFactory.getLogger(CoinbaseWalletV2WithUniqueAddresses.class);
@@ -44,7 +45,7 @@ public class CoinbaseWalletV2WithUniqueAddresses extends CoinbaseWalletV2 implem
     @Override
     public String generateNewDepositCryptoAddress(String cryptoCurrency, String label) {
         if (!getCryptoCurrencies().contains(cryptoCurrency)) {
-            log.error("Wallet supports only " + Arrays.toString(getCryptoCurrencies().toArray()) + " not " + cryptoCurrency);
+            log.error("Wallet supports only {} not {}", Arrays.toString(getCryptoCurrencies().toArray()), cryptoCurrency);
             return null;
         }
         initIfNeeded(cryptoCurrency);
@@ -60,7 +61,7 @@ public class CoinbaseWalletV2WithUniqueAddresses extends CoinbaseWalletV2 implem
             return address.getAddress();
         }
         if (addressesResponse != null && addressesResponse.getErrors() != null) {
-            log.error("generateNewDepositCryptoAddress - " + addressesResponse.getErrorMessages());
+            log.error("generateNewDepositCryptoAddress - {}", addressesResponse.getErrorMessages());
         }
         return null;
     }
@@ -78,7 +79,18 @@ public class CoinbaseWalletV2WithUniqueAddresses extends CoinbaseWalletV2 implem
         log.trace("Received transactions: {}", transactions);
         int confirmations = getConfirmations(transactions);
         BigDecimal amount = getAmount(transactions);
-        return new ReceivedAmount(amount, confirmations);
+        ReceivedAmount receivedAmount = new ReceivedAmount(amount, confirmations);
+        receivedAmount.setTransactionHashes(getTransactionHashes(transactions));
+        return receivedAmount;
+    }
+
+    private List<String> getTransactionHashes(List<CBTransaction> transactions) {
+        return transactions.stream()
+            .map(CBTransaction::getNetwork)
+            .filter(Objects::nonNull)
+            .map(CBNetwork::getHash)
+            .filter(hash -> hash != null && !hash.isBlank())
+            .toList();
     }
 
     private BigDecimal getAmount(List<CBTransaction> transactions) {
@@ -102,10 +114,9 @@ public class CoinbaseWalletV2WithUniqueAddresses extends CoinbaseWalletV2 implem
     private List<CBTransaction> getReceivedTransactions(String addressId, String cryptoCurrency) {
         return getTransactions(addressId, cryptoCurrency).stream()
             .filter(t -> "send".equals(t.getType()))
-            .filter(t -> "pending".equals(t.getStatus())
-                || "completed".equals(t.getStatus()))
+            .filter(t -> "pending".equals(t.getStatus()) || "completed".equals(t.getStatus()))
             .filter(t -> t.getAmount() != null && t.getAmount().getCurrency().equals(cryptoCurrency))
-            .collect(Collectors.toList());
+            .toList();
     }
 
     private String getAddressId(String address, String cryptoCurrency) {
